# vocabuildary

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml  words.csv
.github/: build-and-push.yml
.github/workflows/: build-and-push.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_user_settings.py  0003_books.py  0004_learning_progress.py  0005_dictionary_imports.py  0006_catalog_books_and_reminder_slots.py  0007_language_skills.py  0008_apprise_notifications.py  0009_mobile_notifications.py
app/adapters/: apprise.py  llm_gateway.py  telegram.py
app/common/: constants.py  logging_config.py
app/db/: database.py  models.py
app/services/: book_service.py  book_storage_service.py  book_text_extraction.py  catalog_service.py  dictionary_import_service.py  header_identity.py  language_skill_service.py  mobile_notification_service.py  notification_service.py  reminder_content_service.py  reminder_schedule_service.py  user_service.py  word_service.py
app/ui/: __init__.py  server.py
jobs/: import_words.py  send_daily_word.py
k8s/: 00-namespace.yaml  10-externalsecret.yaml  30-deployment.yaml  argocd-app.yaml  kustomization.yaml  service.yaml
tests/: test_book_service.py  test_book_storage_service.py  test_book_text_extraction.py  test_dictionary_import_service.py  test_header_identity.py  test_language_skill_service.py  test_learning_schedule.py  test_llm_gateway_adapter.py
