[project]
name = "vocabuildary"
version = "1.5.0"
description = "Daily vocabulary Telegram bot, k8s-native, wired to a personal LLM Gateway."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0" }
authors = [{ name = "Krishnaraj Thadesar" }]

dependencies = [
    "alembic>=1.13.1",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.30",
    "psycopg[binary]>=3.2.1",
    "apscheduler>=3.10.4,<4",
    "boto3>=1.43.2",
    "pypdf>=6.10.2",
    "ebooklib>=0.20",
    "beautifulsoup4>=4.14.3",
    "mobi>=0.4.1",
    "wordfreq>=3.1.1",
    "apprise>=1.9.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "jobs"]

[tool.ruff]
line-length = 100
target-version = "py311"
